syntax = "proto3";

package soma.rpc;

import "soma/rpc/executed_transaction.proto";

message Commit {
  // The index of this commit.
  optional uint32 index = 1;

  // The digest of this commit.
  optional string digest = 2;

  optional uint64 timestamp_ms = 3;

  // List of transactions included in this commit.
  repeated ExecutedTransaction transactions = 4;
}